additional test coverage